--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -18,54 +18,56 @@ description: 吵架了，分析一下原因，平复一下心情。
 ##1、导火索
 
 下午我妈给我打了电话，我心情很不好，妈妈说话虽然狠，但是想想是对的，总结一下，葱确实没给我面子
--非要报考江苏公务员
--我哥婚礼不去，一个傻逼同学的婚礼提前调休各种请假去
--问她过年去我家不，支支吾吾
+- 非要报考江苏公务员
+- 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去
+- 问她过年去我家吃饭不，支支吾吾
 
 反观我是怎么对她的：
--她妈去年五一来北京，陪玩陪吃
--她父母来看她工作地点，陪看陪吃
+- 她妈去年五一来北京，陪玩陪吃
+- 她父母来看她工作地点，陪看陪吃
 
-越发觉得烦躁，在她的要求下，我现在说话轻声细语，生怕吓到她，有个P用，就特么不给面子，啥事还得征求你意见咯，去你妈的，滚吧。
+越发觉得烦躁，在她的要求下，我平时说话轻声细语，生怕吓到她，有个P用，照样拒绝，不给面子，草。
 
 ##2、过程
 
-过程就是我从周六能否不上班出发，引出周六可以调休，让她理由无法成立，然后问她，假设下周六我哥婚礼，去否
-回答依然是
+过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还有什么害羞，去你妈的，过年你都27了
 
->不想去
+然后问她，假设下周六我哥婚礼，去否，回答依然是
 
-后来再问，就是
+> 不想去
 
->不去。
+等我怒了之后再问就是
 
-呵呵，草泥马，滚吧。现在特么的就不讲礼，以后还了得，这点面子都不给，去你妈的。
+> 不去。
+
+呵呵，翅膀硬了啊。现在就特么的不讲礼，以后还了得，这点面子都不给，我呵你一脸。
 
 ##3、争吵升级
 
 在我及其严肃的问她，过年带你回家吃饭去么？葱依旧不回答，甚至说
->你这样逼我，我不回答。
+
+> 你这样逼我，我不回答。
+
 我特么不逼你的时候，你倒是答应啊，草，给脸不要，典型的。
 
 我处处为她想，宠得太狠，她居然问
->你啥时候宠我了？
+
+> 你啥时候宠我了？
 
 卧槽，滚你妈逼，老子白疼你个傻逼了。
 
 我撂下一句话
->你自己想想吧！
+
+> 你自己想想吧！
 
 
 ## 4、我与葱的矛盾
 
--个性
-两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持
--冷战
-处理方法，我是事后就想和好，葱是绝对不先开口，开冷战，不说话，扭头就走
-
+- 个性
+两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持。但我是脾气发完就想和好，葱是绝对不先开口，开冷战，不说话，扭头就走
 
 ## 5、处理方法
-这次绝对不道歉，妈的，又不是我的错
+这次绝对不道歉，妈的，又不是我的错，草。
 
 
 —End—
