--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -18,11 +18,13 @@ description: 吵架了，分析一下原因，平复一下心情。
 ##1、导火索
 
 下午我妈给我打了电话，我心情很不好，妈妈说话虽然狠，但是想想是对的，总结一下，葱确实没给我面子
+
 - 非要报考江苏公务员
 - 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去
 - 问她过年去我家吃饭不，支支吾吾
 
-反观我是怎么对她的：
+反观我是怎么对她的
+
 - 她妈去年五一来北京，陪玩陪吃
 - 她父母来看她工作地点，陪看陪吃
 
@@ -48,13 +50,13 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 你这样逼我，我不回答。
 
-我特么不逼你的时候，你倒是答应啊，草，给脸不要，典型的。
+我特么不逼你的时候，你倒是答应啊，给脸不要啊这是。
 
-我处处为她想，宠得太狠，她居然问
+我说处处为她想，宠得有点过了，她居然问
 
 > 你啥时候宠我了？
 
-卧槽，滚你妈逼，老子白疼你个傻逼了。
+你真是个小公主啊，爱找谁找谁去。
 
 我撂下一句话
 
@@ -63,14 +65,19 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ## 4、我与葱的矛盾
 
-- 个性
 两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持。但我是脾气发完就想和好，葱是绝对不先开口，开冷战，不说话，扭头就走
 
 ## 5、处理方法
 这次绝对不道歉，妈的，又不是我的错，草。
 
+即使和好，我第一句话就是
 
-—End—
+>如果下周是我哥婚礼，去不去
+
+回答“不去”就分手。
+
+
+—干你娘—
 
 
 
