--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -3,16 +3,20 @@ layout: post
 title: 我吵了葱
 date: 2015-11-20
 categories: blog
-tags: [吵架,原因]
+tags: [吵架,分析]
 description: 吵架了，分析一下原因，平复一下心情。
 
 ---
 
 * 1、导火索
+
 * 2、过程
+
 * 3、争吵升级
+
 * 4、我与葱的矛盾
 
+* 5、处理方法
 
 
 ##1、导火索
@@ -20,19 +24,22 @@ description: 吵架了，分析一下原因，平复一下心情。
 下午我妈给我打了电话，我心情很不好，妈妈说话虽然狠，但是想想是对的，总结一下，葱确实没给我面子
 
 - 非要报考江苏公务员
+
 - 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去
+
 - 问她过年去我家吃饭不，支支吾吾
 
 反观我是怎么对她的
 
 - 她妈去年五一来北京，陪玩陪吃
+
 - 她父母来看她工作地点，陪看陪吃
 
-越发觉得烦躁，在她的要求下，我平时说话轻声细语，生怕吓到她，有个P用，照样拒绝，不给面子，草。
+越发觉得烦躁，在她的要求下，我平时说话轻声细语，生怕吓到她，有用？照样拒绝，不给面子，X。
 
 ##2、过程
 
-过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还有什么害羞，去你妈的，过年你都27了
+过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还说什么害羞，过年你都27了！
 
 然后问她，假设下周六我哥婚礼，去否，回答依然是
 
@@ -42,11 +49,11 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 不去。
 
-呵呵，翅膀硬了啊。现在就特么的不讲礼，以后还了得，这点面子都不给，我呵你一脸。
+呵呵，现在就特么的不讲礼，以后还了得，这点面子都不给，我呵你一脸。
 
 ##3、争吵升级
 
-在我及其严肃的问她，过年带你回家吃饭去么？葱依旧不回答，甚至说
+在我极其严肃的问她，过年带你回我家吃饭去么？葱依旧不回答，甚至说
 
 > 你这样逼我，我不回答。
 
@@ -56,7 +63,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 你啥时候宠我了？
 
-你真是个小公主啊，爱找谁找谁去。
+你真是个小公主啊，爷陪不起。
 
 我撂下一句话
 
@@ -65,10 +72,11 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ## 4、我与葱的矛盾
 
-两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持。但我是脾气发完就想和好，葱是绝对不先开口，开冷战，不说话，扭头就走
+两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持。但我是脾气发完就想和好，葱是绝对不先开口，冷战，扭头就走。
 
 ## 5、处理方法
-这次绝对不道歉，妈的，又不是我的错，草。
+
+这次我绝对不道歉，妈的，又不是我的错，草。
 
 即使和好，我第一句话就是
 
@@ -77,7 +85,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 回答“不去”就分手。
 
 
-—干你娘—
+—干—
 
 
 
