--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -25,7 +25,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 - 非要报考江苏公务员
 
-- 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去
+- 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去。我姥姥姥爷来你都不说主动去见个面问个好，你爸妈来我特么一直陪着，你还挑三拣四说我没有把钱押那，我日。
 
 - 问她过年去我家吃饭不，支支吾吾
 
@@ -63,7 +63,11 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 你啥时候宠我了？
 
-你真是个小公主啊，爷陪不起。
+我特么义务给你查这个查那个，以前你说车票不会买，这去参加婚礼，你买票这不挺熟练的！操。你真是个小公主啊，爷陪不起。你娘对我不满意，老子对你和你娘都不满意，滚。
+
+你算老几啊，孟超结婚凭啥第一个通知你，你丫太把自己当根葱了吧。操，你还真是葱。日。贱婢，自己腆着脸去给被人送钱。别觉得你是女生，我就得让着你，你特么不讲理我让你干p。
+
+老子特么的周末你一句话我就过去了，我推掉了多少同学聚会，操，给你说有p用。
 
 我撂下一句话
 
@@ -82,10 +86,63 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 >如果下周是我哥婚礼，去不去
 
-回答“不去”就分手。
+回答“不去”就分手，顺便把老子给你买的还给我，我也把你给买的还给你。
 
+回答“去”，很好。
+
+我对你的要求
+
+- 给我面子，学会配合我做一些事情
+- 在一些问题上，没有那么多理由
+- 改掉老是酸别人的毛病，一把我惹毛就说在开玩笑，开个p咧
+- 心里不爽别整个臭脸给我
+
+对我自己的要求
+
+- 今后给她干所有的事的时候，想好这件事是否迁就了她，是否让自己觉得不爽，直接反馈
 
 —干—
+
+##盘点一下你丫给老子买过啥
+
+- 围巾
+- 手套
+- 毛衣
+- 袜子
+- 3个衬衣，我自己付钱
+- levis的仔裤，我自己付钱
+- 钱包，还特么不是我喜欢的那种款式
+- 娃娃
+- 赠送的洗衣液和洗发水
+- 拖鞋
+- 十元左右的饼干
+
+老子给你买的
+
+- 零食&水果N次，每次少则20，多则200，平均一次60，至少10次
+- ipad mini2
+- 娃娃
+- 蛋糕，用我给的味多美卡买的
+- 下馆子几乎都是我付钱
+- 自行车
+- 电磁炉
+- 买火车票（去天津的很多趟，来回的）
+- 买回家的车票
+
+老子给你干的事情
+
+- 查秒拍之类的app
+- 陪你妈逛北京
+- 陪你爹妈看你工作的地方，我特么是主动打电话说要去的，本来没我啥事，袁竞提前给我打招呼
+- 你妈来看你住的屋子，我陪了两天，还送到车站
+
+
+你给老子干的事情
+
+- 我姥爷姥娘来，你不说过来看
+- 我哥婚礼，提前告诉你，毛用没有
+
+
 
 
 
