--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -8,6 +8,8 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ---
 
+注： 这篇日志，是提醒自己不要忘记这段耻辱。
+
 * 1、导火索
 
 * 2、过程
@@ -35,11 +37,13 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 - 她父母来看她工作地点，陪看陪吃
 
+- 她妈今年10月来看她的住处，不仅陪着两天，还买好票，送到车站，连校庆晚会都没去看。你说你校庆也没去，是我让你不去的咯? 
+
 越发觉得烦躁，在她的要求下，我平时说话轻声细语，生怕吓到她，有用？照样拒绝，不给面子，X。
 
 ##2、过程
 
-过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还说什么害羞，过年你都27了！
+过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还说什么不想去是因为害羞，过年你特么都27了！
 
 然后问她，假设下周六我哥婚礼，去否，回答依然是
 
@@ -57,7 +61,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 你这样逼我，我不回答。
 
-我特么不逼你的时候，你倒是答应啊，给脸不要啊这是。
+我特么不逼你的时候，你倒是答应啊，给脸不要啊这是。再说，这问题还用想么？！
 
 我说处处为她想，宠得有点过了，她居然问
 
@@ -65,9 +69,9 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 我特么义务给你查这个查那个，以前你说车票不会买，这去参加婚礼，你买票这不挺熟练的！操。你真是个小公主啊，爷陪不起。你娘对我不满意，老子对你和你娘都不满意，滚。
 
-你算老几啊，孟超结婚凭啥第一个通知你，你丫太把自己当根葱了吧。操，你还真是葱。日。贱婢，自己腆着脸去给被人送钱。别觉得你是女生，我就得让着你，你特么不讲理我让你干p。
+你算老几啊，孟超结婚凭啥第一个通知你，你丫太把自己当根葱了吧。操，你还真特么是葱啊。日。贱婢，自己腆着脸去给被人送钱。别觉得你是女生，我就得让着你，你特么不讲理我让你干p。
 
-老子特么的周末你一句话我就过去了，我推掉了多少同学聚会，操，给你说有p用。
+老子特么的周末你一句过来吃饭吧我就过去了，我推掉了多少次同学聚会，操。
 
 我撂下一句话
 
@@ -76,7 +80,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ## 4、我与葱的矛盾
 
-两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持。但我是脾气发完就想和好，葱是绝对不先开口，冷战，扭头就走。
+两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持。但我是脾气发完就想和好，葱是绝对不先开口，冷战，扭头就走。为此，我专门写下这篇日志，目的是提醒自己不要忘记这段耻辱。
 
 ## 5、处理方法
 
@@ -86,7 +90,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 >如果下周是我哥婚礼，去不去
 
-回答“不去”就分手，顺便把老子给你买的还给我，我也把你给买的还给你。
+回答“不去”就分手。
 
 回答“去”，很好。
 
@@ -107,29 +111,29 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 - 围巾
 - 手套
-- 毛衣
-- 袜子
-- 3个衬衣，我自己付钱
-- levis的仔裤，我自己付钱
-- 钱包，还特么不是我喜欢的那种款式
+- 薄毛衫
+- 2双袜子
+- 钱包，我本打算自己买个竖款的，没问我就买了横款，照片不还是没法放，呵，无所谓了，某人的照片也该扔了
 - 娃娃
 - 赠送的洗衣液和洗发水
-- 拖鞋
-- 十元左右的饼干
-
+- 凉/棉拖鞋
+- 饼干
+-------------------
+- 3个衬衣，我自己付钱
+- levis的仔裤，我自己付钱
+- 蛋糕，用我给的味多美卡买的
 老子给你买的
 
 - 零食&水果N次，每次少则20，多则200，平均一次60，至少10次
 - ipad mini2
 - 娃娃
-- 蛋糕，用我给的味多美卡买的
 - 下馆子几乎都是我付钱
 - 自行车
 - 电磁炉
-- 买火车票（去天津的很多趟，来回的）
-- 买回家的车票
+- 火车票（去天津的很多趟，来回的）
+- 回家的车票
 
-老子给你干的事情
+老子给你干的事情（今后，如果有今后，记录下每一件我给你干的事）
 
 - 查秒拍之类的app
 - 陪你妈逛北京
