--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -8,7 +8,12 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ---
 
-注： 这篇日志，是提醒自己不要忘记这段耻辱。
+注： 这篇日志，是提醒自己不要忘记这次耻辱。
+
+
+
+
+
 
 * 1、导火索
 
@@ -20,30 +25,34 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 * 5、处理方法
 
+* 6、记录
+
 
 ##1、导火索
 
-下午我妈给我打了电话，我心情很不好，妈妈说话虽然狠，但是想想是对的，总结一下，葱确实没给我面子
+下午我妈给我打了电话，我心情很不好，妈妈说话直接，但细想是对的，总结一下，葱确实没给我面子
 
-- 非要报考江苏公务员
+- 非要报考江苏公务员，一个即使考上都不会去的地方，为什么要去报。
 
-- 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去。我姥姥姥爷来你都不说主动去见个面问个好，你爸妈来我特么一直陪着，你还挑三拣四说我没有把钱押那，我日。
+- 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去。我姥姥姥爷来你都不说主动去见个面问个好，你爸妈来我一直陪着，你还挑三拣四说我没有把钱押那，呵。
 
-- 问她过年去我家吃饭不，支支吾吾
+- 问她过年去我家吃饭不，不答复，支支吾吾
+
+- 我二姨夫以曾经学生的身份给她爹打电话，说可以牵线，他爹说，先处着。呵
 
 反观我是怎么对她的
 
 - 她妈去年五一来北京，陪玩陪吃
 
-- 她父母来看她工作地点，陪看陪吃
+- 她父母来看她工作地点，陪看陪吃，结账没提前压钱居然被说了
 
-- 她妈今年10月来看她的住处，不仅陪着两天，还买好票，送到车站，连校庆晚会都没去看。你说你校庆也没去，是我让你不去的咯? 
+- 她妈今年我们校庆那两天来看她的住处，我不仅陪着两天，走的时候还买好票，送到车站，连校庆晚会都没去看。你说你校庆也没去，是我让你不去的咯? 
 
-越发觉得烦躁，在她的要求下，我平时说话轻声细语，生怕吓到她，有用？照样拒绝，不给面子，X。
+越发觉得烦躁，在她的要求下，我平时和她说话轻声细语，生怕吓到她，有用？问个啥事照样拒绝，不给面子，呵。
 
 ##2、过程
 
-过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还说什么不想去是因为害羞，过年你特么都27了！
+过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还说什么不想去是因为害羞，过年你都27了！
 
 然后问她，假设下周六我哥婚礼，去否，回答依然是
 
@@ -53,7 +62,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 不去。
 
-呵呵，现在就特么的不讲礼，以后还了得，这点面子都不给，我呵你一脸。
+呵呵，现在就不讲礼，以后还了得，这点面子都不给，我呵你一脸。
 
 ##3、争吵升级
 
@@ -61,17 +70,17 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 你这样逼我，我不回答。
 
-我特么不逼你的时候，你倒是答应啊，给脸不要啊这是。再说，这问题还用想么？！
+我不逼你的时候，你倒是答应啊，给脸不要啊这是。再说，这问题还用想么？！
 
 我说处处为她想，宠得有点过了，她居然问
 
 > 你啥时候宠我了？
 
-我特么义务给你查这个查那个，以前你说车票不会买，这去参加婚礼，你买票这不挺熟练的！操。你真是个小公主啊，爷陪不起。你娘对我不满意，老子对你和你娘都不满意，滚。
+我义务给你查这个查那个，以前你说车票不会买，这去参加婚礼，你买票这不挺熟练的！操。你真是个小公主啊，爷陪不起。你娘对我不满意，我对你和你娘都不满意。
 
-你算老几啊，孟超结婚凭啥第一个通知你，你丫太把自己当根葱了吧。操，你还真特么是葱啊。日。贱婢，自己腆着脸去给被人送钱。别觉得你是女生，我就得让着你，你特么不讲理我让你干p。
+你算老几啊，你同学结婚凭啥第一个通知你，你丫太把自己当根葱了吧。呵，你还真是葱啊。自己腆着脸去给被人送钱，贱。你是小公举啊，我事事得让着你，你不讲理我让你干p。
 
-老子特么的周末你一句过来吃饭吧我就过去了，我推掉了多少次同学聚会，操。
+我的周末你一句过来吃饭吧我就过去了，我推掉了多少次同学聚会，关键菜还难吃。
 
 我撂下一句话
 
@@ -92,22 +101,24 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 回答“不去”就分手。
 
-回答“去”，很好。
+回答“去”，很好，今后一直这样，不给面子你可以滚了。
 
 我对你的要求
 
-- 给我面子，学会配合我做一些事情
-- 在一些问题上，没有那么多理由
+- 给我面子，做事情配合我
+- 在原则问题上，没那么多理由，能去做就别bb
 - 改掉老是酸别人的毛病，一把我惹毛就说在开玩笑，开个p咧
-- 心里不爽别整个臭脸给我
+- 心里不爽别整个臭脸给我，看见就烦，丑，懂么，丑
 
 对我自己的要求
 
-- 今后给她干所有的事的时候，想好这件事是否迁就了她，是否让自己觉得不爽，直接反馈
+- 今后给她干每件事的时候先问问自己，愿意么？不爽就吐
 
-—干—
+— 干 —
 
-##盘点一下你丫给老子买过啥
+##记录
+
+你给我买过的东西
 
 - 围巾
 - 手套
@@ -119,29 +130,31 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 凉/棉拖鞋
 - 饼干
 -------------------
-- 3个衬衣，我自己付钱
-- levis的仔裤，我自己付钱
-- 蛋糕，用我给的味多美卡买的
-老子给你买的
+- 3个衬衣，你陪着逛，我自己付钱
+- levis的仔裤，你陪着逛，我自己付钱
+- 我生日那天的蛋糕，用我给的味多美卡买的，对哦，我生日你啥都没送
 
-- 零食&水果N次，每次少则20，多则200，平均一次60，至少10次
+我给你买的
+
+- 零食&水果N次，每次少则20，多则200，平均一次60，至少10次以上，超市购物掏钱就不说了
 - ipad mini2
 - 娃娃
-- 下馆子几乎都是我付钱
-- 自行车
-- 电磁炉
+- 下馆子几乎都是我付钱，唯一一次我说最近一直我付，你倒不乐意了，那臭脸，我都想扇你
+- 自行车，我爸寄过来的
+- 电磁炉，双十一买的，你还说不划算，你自己买啊
 - 火车票（去天津的很多趟，来回的）
 - 回家的车票
+- 羽毛球拍
 
-老子给你干的事情（今后，如果有今后，记录下每一件我给你干的事）
+我给你干的事情（今后，如果有今后，记录下每一件我给你干的事）
 
 - 查秒拍之类的app
 - 陪你妈逛北京
-- 陪你爹妈看你工作的地方，我特么是主动打电话说要去的，本来没我啥事，袁竞提前给我打招呼
+- 陪你爹妈看你工作的地方，我是主动打电话说要去的，本来没我啥事，袁竞提前给我打招呼
 - 你妈来看你住的屋子，我陪了两天，还送到车站
 
 
-你给老子干的事情
+你给我干的事情
 
 - 我姥爷姥娘来，你不说过来看
 - 我哥婚礼，提前告诉你，毛用没有
