--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -10,11 +10,6 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 注： 这篇日志，是提醒自己不要忘记这次耻辱。
 
-
-
-
-
-
 * 1、导火索
 
 * 2、过程
@@ -129,7 +124,9 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 赠送的洗衣液和洗发水
 - 凉/棉拖鞋
 - 饼干
-还有这些噢
+
+还有这些
+
 - 3个衬衣，你陪着逛，我自己付钱
 - levis的仔裤，你陪着逛，我自己付钱
 - 我生日那天的蛋糕，用我给的味多美卡买的，对哦，我生日你啥都没送
