--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -8,7 +8,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ---
 
-注： 这篇日志，是提醒自己不要忘记这次耻辱。
+注： 写这篇日志，是提醒自己不要忘记这次耻辱。
 
 * 1、导火索
 
@@ -25,39 +25,22 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ##1、导火索
 
-下午我妈给我打了电话，我心情很不好，妈妈说话直接，但细想是对的，总结一下，葱确实没给我面子
+下午我妈给我像平常一样给我打了电话，提到了女友回家参加同学婚礼的事情，一番交流之后，我心情很不好，妈妈讲话直接，但细想道理是对的，总结一下，女友已被惯坏，以自我为中心，做事不给我面子。
 
-- 非要报考江苏公务员，一个即使考上都不会去的地方，为什么要去报。
-
-- 我哥婚礼不去，一个男同学的婚礼提前调休各种请假去。我姥姥姥爷来你都不说主动去见个面问个好，你爸妈来我一直陪着，你还挑三拣四说我没有把钱押那，呵。
-
-- 问她过年去我家吃饭不，不答复，支支吾吾
-
-- 我二姨夫以曾经学生的身份给她爹打电话，说可以牵线，他爹说，先处着。呵
-
-反观我是怎么对她的
-
-- 她妈去年五一来北京，陪玩陪吃
-
-- 她父母来看她工作地点，陪看陪吃，结账没提前压钱居然被说了
-
-- 她妈今年我们校庆那两天来看她的住处，我不仅陪着两天，走的时候还买好票，送到车站，连校庆晚会都没去看。你说你校庆也没去，是我让你不去的咯? 
-
-越发觉得烦躁，在她的要求下，我平时和她说话轻声细语，生怕吓到她，有用？问个啥事照样拒绝，不给面子，呵。
 
 ##2、过程
 
-过程就是我从周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，还说什么不想去是因为害羞，过年你都27了！
+我从微信问她周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，至于见到我的家人会害羞，过年你都27了，老女人！
 
-然后问她，假设下周六我哥婚礼，去否，回答依然是
+然后我打了电话，直接问她，假设下周六我哥婚礼，去否，回答是
 
 > 不想去
 
-等我怒了之后再问就是
+交谈片刻，由于对方死不悔改，还开始狡辩，我心情变得很差，对方丝毫不顾及我感受，再问同样的问题，回答是
 
 > 不去。
 
-呵呵，现在就不讲礼，以后还了得，这点面子都不给，我呵你一脸。
+我就问问你，尊重两字怎么写，留着你有何用。
 
 ##3、争吵升级
 
@@ -71,26 +54,27 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 > 你啥时候宠我了？
 
-我义务给你查这个查那个，以前你说车票不会买，这去参加婚礼，你买票这不挺熟练的！操。你真是个小公主啊，爷陪不起。你娘对我不满意，我对你和你娘都不满意。
+我义务给你干这个干那个，查这个查那个，买这个买哪个，以前你说车票不会买，这去参加婚礼，你买票这不挺熟练的！你真是个小公主啊，爷陪不起。你妈对我不满意，现在告诉你，我对你和你妈都不满意。
 
-你算老几啊，你同学结婚凭啥第一个通知你，你丫太把自己当根葱了吧。呵，你还真是葱啊。自己腆着脸去给被人送钱，贱。你是小公举啊，我事事得让着你，你不讲理我让你干p。
+你算老几啊，你同学结婚凭啥第一个通知你，你丫太把自己当根葱了吧。呵，你还真是葱啊。自己腆着脸去给被人送钱，贱。你连小公举都不是啊，你是贱婢啊。我还让着你，呵呵。
 
-我的周末你一句过来吃饭吧我就过去了，我推掉了多少次同学聚会，关键菜还难吃。
+我的周末你一句过来吃饭吧我就过去了，我推掉了多少次同学聚会，关键菜还难吃，鸡肉倒那么多料酒都苦了萨比。
 
 我撂下一句话
 
 > 你自己想想吧！
 
-
 ## 4、我与葱的矛盾
 
-两人都极其倔强，心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持。但我是脾气发完就想和好，葱是绝对不先开口，冷战，扭头就走。为此，我专门写下这篇日志，目的是提醒自己不要忘记这段耻辱。
+两人自尊心都很强，对方是心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持，我是心中有答案，压根不会问她。
+脾气发完，我很快会愿意和好，对面是绝对不先开口，冷战，扭头就走。
+也是为此，我专门写下这篇日志，目的是提醒自己不要忘记这次的耻辱。
 
 ## 5、处理方法
 
-这次我绝对不道歉，妈的，又不是我的错，草。
+放给她烂。
 
-即使和好，我第一句话就是
+如果对面找我和好，第一句话我会问
 
 >如果下周是我哥婚礼，去不去
 
@@ -100,18 +84,18 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 我对你的要求
 
-- 给我面子，做事情配合我
-- 在原则问题上，没那么多理由，能去做就别bb
-- 改掉老是酸别人的毛病，一把我惹毛就说在开玩笑，开个p咧
-- 心里不爽别整个臭脸给我，看见就烦，丑，懂么，丑
+- 尊重我，方方面面，别以为你工作了就了不起
+- 在原则问题上，没那么多理由，能去做就别bb，狡辩只能火上浇油
+- 改掉酸别人的毛病，一把我惹毛就说在开玩笑，开个p咧
+- 心里不爽别整个臭脸给我，看见就烦，本来长得就丑，摆个臭脸我想吐
 
 对我自己的要求
 
-- 今后给她干每件事的时候先问问自己，愿意么？不爽就吐
+- 今后她提出要求的时候，以我为主，我真心想去做就做，不想就说。对待这样一个贱婢，不用尊重。
 
 — 干 —
 
-##记录
+##记录（不断更新中）
 
 你给我买过的东西
 
@@ -143,18 +127,26 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 回家的车票
 - 羽毛球拍
 
-我给你干的事情（今后，如果有今后，记录下每一件我给你干的事）
+你做的那些事
 
-- 查秒拍之类的app
-- 陪你妈逛北京
-- 陪你爹妈看你工作的地方，我是主动打电话说要去的，本来没我啥事，袁竞提前给我打招呼
-- 你妈来看你住的屋子，我陪了两天，还送到车站
+- 硕士毕业找工作期间报考江苏镇江公务员，一个即使考上都不会去的地方，一个大家都劝着别去报考的地方，为什么非要去报。
 
+- 就在她同学婚礼的上周，我哥要举办婚礼，提前一个月问她，表示不去，而这次一个男同学的婚礼提前调休各种请假去。
 
-你给我干的事情
+- 我姥姥姥爷来北京玩，女友都不说主动去见个面问个好。她爸妈来我一直陪着，居然被她妈说我没有抢着付钱，或把钱先押那。
 
-- 我姥爷姥娘来，你不说过来看
-- 我哥婚礼，提前告诉你，毛用没有
+- 过年去我家吃饭问题上，态度不明确
+
+- 我二姨夫以曾经被教过的学生身份给她爹打电话说今后可以牵线，被敷衍过去
+
+我是怎么做的
+
+- 她妈去年五一来北京，陪玩陪吃
+
+- 她父母来看她工作地点，陪看陪吃，结账没提前压钱居然被说了
+
+- 她妈今年我们校庆那两天来看她的住处，我不仅陪着两天，走的时候还买好票，送到车站，连校庆晚会都没去看。你说你校庆也没去，是我让你不去的咯? 
+
 
 
 
