--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 我吵了葱
+title: 吵架
 date: 2015-11-20
 categories: blog
 tags: [吵架,分析]
@@ -76,7 +76,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 如果对面找我和好，第一句话我会问
 
->如果下周是我哥婚礼，去不去
+>如果下周六是我哥婚礼，去不去
 
 回答“不去”就分手。
 
