--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -16,7 +16,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 * 3、争吵升级
 
-* 4、我与葱的矛盾
+* 4、矛盾
 
 * 5、处理方法
 
@@ -30,45 +30,44 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 ##2、过程
 
-我从微信问她周六能否不上班出发，引出周六可以调休，让她说的那些加班的p理由无法成立，至于见到我的家人会害羞，过年你都27了，老女人！
+我问她周六是不是可以安排不上班，周六可以调休，让她说的那些加班的p理由无法成立，至于见到我家人会害羞，过年你都27了，老女人！
 
-然后我打了电话，直接问她，假设下周六我哥婚礼，去否，回答是
+然后我问她，假设下周六我哥婚礼，去否，回答是
 
 > 不想去
 
-交谈片刻，由于对方死不悔改，还开始狡辩，我心情变得很差，对方丝毫不顾及我感受，再问同样的问题，回答是
+交谈片刻，由于对方没有任何认错的态度，还开始狡辩，我心情变得很差，对方丝毫不顾及我感受，再问同样的问题，回答是
 
 > 不去。
 
-我就问问你，尊重两字怎么写，留着你有何用。
+我问你尊重两字会写么？
 
 ##3、争吵升级
 
-在我极其严肃的问她，过年带你回我家吃饭去么？葱依旧不回答，甚至说
+我问她，过年带你回我家吃饭去么？对方依旧不回答，说
 
 > 你这样逼我，我不回答。
 
-我不逼你的时候，你倒是答应啊，给脸不要啊这是。再说，这问题还用想么？！
+呵呵，我不逼你的时候，你倒是答应啊，给脸不要啊这是。再说，这问题还用想么？！这对你有坏处？
 
-我说处处为她想，宠得有点过了，她居然问
+我说是宠你过头了，她问
 
 > 你啥时候宠我了？
 
-我义务给你干这个干那个，查这个查那个，买这个买哪个，以前你说车票不会买，这去参加婚礼，你买票这不挺熟练的！你真是个小公主啊，爷陪不起。你妈对我不满意，现在告诉你，我对你和你妈都不满意。
+我义务给你干这个干那个，查这个查那个，买这个买哪个，以前你说车票不会买，好，我买，这次你又是调休，又是请假参加婚礼，还自己买票给我看截图，这不挺熟练的。真是个小公主啊，爷不陪了。你妈对我不满意，很好，我走。
 
-你算老几啊，你同学结婚凭啥第一个通知你，你丫太把自己当根葱了吧。呵，你还真是葱啊。自己腆着脸去给被人送钱，贱。你连小公举都不是啊，你是贱婢啊。我还让着你，呵呵。
+你说这次婚礼，老孟没给你说，你通过朋友圈知道的，呵，你算老几啊，人家结婚干你啥事，电话通知你，你丫太把自己当根葱了吧。呵，你叫葱，你就真以为自己是葱啊。自己腆着脸去给被人送钱，贱。你连小公举都不是啊，你是贱婢啊。还我让着你，拉倒吧。
 
-我的周末你一句过来吃饭吧我就过去了，我推掉了多少次同学聚会，关键菜还难吃，鸡肉倒那么多料酒都苦了萨比。
+我的周末你一句过来吃饭吧我就过去了，推掉了多少次同学聚会你知道不，关键你做的菜还难吃，鸡肉倒那么多料酒都苦了萨比。
 
 我撂下一句话
 
 > 你自己想想吧！
 
-## 4、我与葱的矛盾
+## 4、矛盾
 
-两人自尊心都很强，对方是心中早就想好了答案，问别人只是为了印证自己的看法，获取对方的支持，我是心中有答案，压根不会问她。
-脾气发完，我很快会愿意和好，对面是绝对不先开口，冷战，扭头就走。
-也是为此，我专门写下这篇日志，目的是提醒自己不要忘记这次的耻辱。
+这个人，绝对不先开口，冷战，扭头就走，心中有答案，问我只是为了获得支持，我反对，就开始气，和所谓的朋友一起声讨我。
+我，脾气发完，会很快忘记不愉快，求和，不长记性。我写下这篇日志，就是是提醒自己不要忘记。
 
 ## 5、处理方法
 
@@ -84,14 +83,14 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 我对你的要求
 
-- 尊重我，方方面面，别以为你工作了就了不起
-- 在原则问题上，没那么多理由，能去做就别bb，狡辩只能火上浇油
-- 改掉酸别人的毛病，一把我惹毛就说在开玩笑，开个p咧
+- 尊重我，方方面面
+- 在原则问题上，没那么多理由，能去做就别bb，找理由只能火上浇油
+- 改掉酸别人的毛病，把我惹毛就说在开玩笑，开个p咧，跟你爹开去
 - 心里不爽别整个臭脸给我，看见就烦，本来长得就丑，摆个臭脸我想吐
 
 对我自己的要求
 
-- 今后她提出要求的时候，以我为主，我真心想去做就做，不想就说。对待这样一个贱婢，不用尊重。
+- 今后她提出要求的时候，我想去做就做，心有不情愿就拒绝。对待这样一个贱婢，不用尊重。
 
 — 干 —
 
@@ -103,14 +102,16 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 手套
 - 薄毛衫
 - 2双袜子
-- 钱包，我本打算自己买个竖款的，没问我就买了横款，照片不还是没法放，呵，无所谓了，某人的照片也该扔了
 - 娃娃
 - 赠送的洗衣液和洗发水
 - 凉/棉拖鞋
 - 饼干
+- 刮胡刀
+- 别人给她的吃的，直接转送给我
 
 还有这些
 
+- 钱包，我本打算自己买个竖款的，没问我就买了横款，照片不还是没法放，呵，无所谓了，某人的照片也该扔了
 - 3个衬衣，你陪着逛，我自己付钱
 - levis的仔裤，你陪着逛，我自己付钱
 - 我生日那天的蛋糕，用我给的味多美卡买的，对哦，我生日你啥都没送
@@ -121,7 +122,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 - ipad mini2
 - 娃娃
 - 下馆子几乎都是我付钱，唯一一次我说最近一直我付，你倒不乐意了，那臭脸，我都想扇你
-- 自行车，我爸寄过来的
+- 自行车，我爸寄过来的，不会给你了，呵呵
 - 电磁炉，双十一买的，你还说不划算，你自己买啊
 - 火车票（去天津的很多趟，来回的）
 - 回家的车票
@@ -129,27 +130,30 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 你做的那些事
 
-- 硕士毕业找工作期间报考江苏镇江公务员，一个即使考上都不会去的地方，一个大家都劝着别去报考的地方，为什么非要去报。
+- 硕士毕业找工作期间报考江苏镇江公务员，一个即使考上都不会去的地方，一个大家都劝着别去报考的地方，要我支持她去报考。
 
-- 就在她同学婚礼的上周，我哥要举办婚礼，提前一个月问她，表示不去，而这次一个男同学的婚礼提前调休各种请假去。
+- 就在她同学婚礼的上周，我哥要举办婚礼，提前一个月问她，直接说不去，这次一个男同学的婚礼提前调休各种请假去。
 
-- 我姥姥姥爷来北京玩，女友都不说主动去见个面问个好。她爸妈来我一直陪着，居然被她妈说我没有抢着付钱，或把钱先押那。
+- 我姥姥姥爷来北京玩，对方不说主动去见个面问个好。
 
-- 过年去我家吃饭问题上，态度不明确
+- 过年去我家吃饭问题上，不回答。
 
-- 我二姨夫以曾经被教过的学生身份给她爹打电话说今后可以牵线，被敷衍过去
+- 我二姨夫以曾经被教过的学生身份给她爹打电话说今后可以牵线，被她爹敷衍过去。
+
 
 我是怎么做的
 
 - 她妈去年五一来北京，陪玩陪吃
 
-- 她父母来看她工作地点，陪看陪吃，结账没提前压钱居然被说了
+- 她爸妈来，我一直陪着，还被她妈说我付钱晚了。
 
 - 她妈今年我们校庆那两天来看她的住处，我不仅陪着两天，走的时候还买好票，送到车站，连校庆晚会都没去看。你说你校庆也没去，是我让你不去的咯? 
 
 
 
+##总结
 
+既然如此，何必浪费时间，别谈了。
 
 
 
