--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -67,11 +67,11 @@ description: 吵架了，分析一下原因，平复一下心情。
 ## 4、矛盾
 
 这个人，绝对不先开口，冷战，扭头就走，心中有答案，问我只是为了获得支持，我反对，就开始气，和所谓的朋友一起声讨我。
-我，脾气发完，会很快忘记不愉快，求和，不长记性。我写下这篇日志，就是是提醒自己不要忘记。
+我，脾气发完，会很快忘记不愉快，很少和别人提这种事，家丑不能外扬，主动联系，总之就是不长记性。我写下这篇日志，就是要提醒自己不要忘记。
 
 ## 5、处理方法
 
-放给她烂。
+放给她烂。取回我自己的东西。
 
 如果对面找我和好，第一句话我会问
 
@@ -103,6 +103,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 薄毛衫
 - 2双袜子
 - 娃娃
+- 睡衣
 - 赠送的洗衣液和洗发水
 - 凉/棉拖鞋
 - 饼干
@@ -120,6 +121,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 
 - 零食&水果N次，每次少则20，多则200，平均一次60，至少10次以上，超市购物掏钱就不说了
 - ipad mini2
+- 睡衣
 - 娃娃
 - 下馆子几乎都是我付钱，唯一一次我说最近一直我付，你倒不乐意了，那臭脸，我都想扇你
 - 自行车，我爸寄过来的，不会给你了，呵呵
@@ -154,6 +156,8 @@ description: 吵架了，分析一下原因，平复一下心情。
 ##总结
 
 既然如此，何必浪费时间，别谈了。
+
+这周把羽毛球拍和ipad带走，然后不联系了。
 
 
 
