add new log breakup

--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -103,11 +103,12 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 薄毛衫
 - 2双袜子
 - 娃娃
-- 睡衣
-- 赠送的洗衣液和洗发水
+- 春/夏睡衣
+- 你买大瓶送的洗衣液和洗发水
 - 凉/棉拖鞋
 - 饼干
 - 刮胡刀
+- 唇膏
 - 别人给她的吃的，直接转送给我
 
 还有这些
@@ -120,7 +121,6 @@ description: 吵架了，分析一下原因，平复一下心情。
 我给你买的
 
 - 零食&水果N次，每次少则20，多则200，平均一次60，至少10次以上，超市购物掏钱就不说了
-- ipad mini2
 - 睡衣
 - 娃娃
 - 下馆子几乎都是我付钱，唯一一次我说最近一直我付，你倒不乐意了，那臭脸，我都想扇你
@@ -128,7 +128,9 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 电磁炉，双十一买的，你还说不划算，你自己买啊
 - 火车票（去天津的很多趟，来回的）
 - 回家的车票
-- 羽毛球拍
+
+- 羽毛球拍（取回）
+- ipad mini2（取回）
 
 你做的那些事
 
@@ -156,8 +158,6 @@ description: 吵架了，分析一下原因，平复一下心情。
 ##总结
 
 既然如此，何必浪费时间，别谈了。
-
-这周把羽毛球拍和ipad带走，然后不联系了。
 
 
 
