modify breakup to watch

--- a/_posts/2015-12-05-breakup.md
+++ b/_posts/2015-12-05-breakup.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 分手
+title: 分手 ？复合?
 date: 2015-12-05
 categories: blog
-tags: [分手]
-description: 决定要放弃了，心里却有些不舍。
+tags: [分手,观察]
+description: 决定要放弃了，心里却有些不舍。最后决定要给彼此一次机会。
 
 ---
 
@@ -20,8 +20,8 @@ description: 决定要放弃了，心里却有些不舍。
 最后，我还是下定了决心，走，这种事情，不能让，不能让她觉得我会惯着她，现在还是同样的事情，命题是“我哥的婚礼，我让你去你却执意不去，但是
 你同学的婚礼，你排除万难非要去”这种，我为什么要让，我现在问她，她的回答又会是什么?我却不想知道了。
 今天为什么我会难受，因为她8点多去买菜，准备了一上午，这周日还调班，就是想和我好好过周末，修补我们的感情。但是另一方面，我能
-看出来她不打算先道歉的，因为我今天是给她送双十一一起买的情侣拖鞋中的她那一份，她却自己又买了一双白色的，可见她对我俩的和好根本不抱希望，她自己也绝对不会先向我
-道歉。我周三问她周六是否在家，她心里肯定开心得不行，而且还把周末的班调出来，这都是我猜测的。我今天过去之后，她室友在，我也不好
+看出来她不打算先道歉的，因为我今天是给她送双十一一起买的情侣拖鞋中的她那一份，她却自己又买了一双白色的，可见她对我俩的和好根本不抱希望（问过之后发现是想单位放一双），她自己也绝对不会先向我
+道歉。我周三问她周六是否在家，她心里肯定开心得不行，而且还把周末的班调出来，这都是我猜测的（她说她闻到大宝的味道特别想我，差点就绷不住了，但是一上班又忘了）。我今天过去之后，她室友在，我也不好
 直接把东西拿走，就准备吃个饭再走，我直接坐沙发，她做好饭出来一起吃的时候，还嗔我怎么进家之后不给你打招呼，我回答，打啥招呼，
 你刚才不是在忙么，她也没纠缠，吃饭的时候，我们吃了半天，她说你就不能夸夸我做的菜么，我说不能，过了一会，她让我帮她倒水，我把水杯放她
 跟前让她自己倒，三人一起聊天，聊到保研，她开始说她师弟的事情，我听了无数遍，烦透了，然后我岔开她的话，问她室友什么专业的，
@@ -47,3 +47,4 @@ description: 决定要放弃了，心里却有些不舍。
 我要求她不要和那些男同学、男同事走太近，说话不要肢体接触。她改了
 我让她不要做头发。她没听我的。自己去做了。
 我这个人，从没向她要过钱，她工作之后倒是经常问我是不是缺钱，我怎么可能向她要。
+今晚她打电话，最后求我原谅，那一路哭的呀，我心软决定给她一段时间观察一下。
