new blog communicaiton

--- a/_posts/2015-11-20-conflict.md
+++ b/_posts/2015-11-20-conflict.md
@@ -105,11 +105,12 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 娃娃
 - 春/夏睡衣
 - 你买大瓶送的洗衣液和洗发水
-- 凉/棉拖鞋
+- 凉/棉拖鞋（各2双）
 - 饼干
 - 刮胡刀
 - 唇膏
 - 别人给她的吃的，直接转送给我
+- 樱桃蔓越莓饼干
 
 还有这些
 
@@ -128,6 +129,7 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 电磁炉，双十一买的，你还说不划算，你自己买啊
 - 火车票（去天津的很多趟，来回的）
 - 回家的车票
+- 恋爱保险
 
 - 羽毛球拍（取回）
 - ipad mini2（取回）
@@ -152,6 +154,10 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 她爸妈来，我一直陪着，还被她妈说我付钱晚了。
 
 - 她妈今年我们校庆那两天来看她的住处，我不仅陪着两天，走的时候还买好票，送到车站，连校庆晚会都没去看。你说你校庆也没去，是我让你不去的咯? 
+
+我讨厌的说法
+
+- 你帮着拿行李呗。上次过年回家没帮上，心里挺愧疚的
 
 
 
