--- a/postbackup/2015-11-20-conflict.md
+++ b/postbackup/2015-11-20-conflict.md
@@ -111,6 +111,9 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 唇膏
 - 别人给她的吃的，直接转送给我
 - 樱桃蔓越莓饼干
+- 大宝
+- 毛衣（110）
+- 保暖内衣（89）
 
 还有这些
 
@@ -126,14 +129,14 @@ description: 吵架了，分析一下原因，平复一下心情。
 - 娃娃
 - 下馆子几乎都是我付钱，唯一一次我说最近一直我付，你倒不乐意了，那臭脸，我都想扇你
 - 自行车，我爸寄过来的，不会给你了，呵呵
-- 电磁炉，双十一买的，你还说不划算，你自己买啊
+- 电磁炉（已给钱）
 - 火车票（去天津的很多趟，来回的）
 - 回家的车票
 - 恋爱保险
-
+- 橙子
 - 羽毛球拍（取回）
 - ipad mini2（取回）
-
+- 挂烫机（已给钱）
 你做的那些事
 
 - 硕士毕业找工作期间报考江苏镇江公务员，一个即使考上都不会去的地方，一个大家都劝着别去报考的地方，要我支持她去报考。
